refactor: Refactored to build and package all dependencies
Signed-off-by: dhoard <doug.hoard@gmail.com>