@@ -13,7 +13,7 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <tidesdb.version>0.8.3_tidesdb-9.3.13</tidesdb.version>
+        <tidesdb.version>0.1.0</tidesdb.version>
     </properties>
 
     <dependencies>
@@ -39,6 +39,9 @@
                         </goals>
                         <configuration>
                             <mainClass>example.UnifiedExample</mainClass>
+                            <jvmArgs>
+                                <jvmArg>--enable-native-access=ALL-UNNAMED</jvmArg>
+                            </jvmArgs>
                         </configuration>
                     </execution>
                 </executions>
